--- a/src/App.scss
+++ b/src/App.scss
@@ -67,3 +67,43 @@ div::-webkit-scrollbar {
 }
 
 // END :: scroll
+
+// notification modal
+
+.notification-modal {
+	right: 2%;
+	bottom: 2%;
+	height: 10%;	
+}
+.goIn{
+	animation: comein 0.5s;
+	animation-iteration-count: 1;
+  	animation-timing-function: linear;
+}
+.goOut{
+	animation: comeout 0.5s;
+	animation-iteration-count: 1;
+  	animation-timing-function: linear;
+}
+@keyframes comein {
+  from {
+	  opacity: 0;
+	  transform: translateX(100%); 
+	  }
+  to {
+	  opacity: 1;
+	  transform: translateX(0);
+	  }
+}
+@keyframes comeout {
+  from {
+	  opacity: 1;
+	  transform: translateX(0);
+	  }
+  to {
+	  opacity: 0;
+	  transform: translateX(100%);
+	  }
+}
+
+// END :: notification modal
